Require java8 and use graphviz-java for png